--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "rollup -c -w",
+		"dev": "concurrently \"rollup -c -w\" \"python3 server/flaskServer.py --dev\"",
 		"build": "rollup -c"
 	},
 	"author": "",
@@ -15,15 +15,19 @@
 		"@rollup/plugin-typescript": "^8.2.5",
 		"@types/react": "^17.0.20",
 		"@types/react-dom": "^17.0.9",
+		"@types/react-helmet": "^6.1.2",
+		"@types/react-router-dom": "^5.1.9",
 		"@types/three": "^0.131.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
+		"concurrently": "^6.2.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"patch-package": "^6.4.7",
 		"prettier": "^2.4.0",
 		"rollup": "^2.56.3",
+		"rollup-plugin-analyzer": "^4.0.0",
 		"rollup-plugin-css-only": "^3.1.0",
 		"rollup-plugin-livereload": "^2.0.5",
 		"rollup-plugin-replace": "^2.2.0",
@@ -33,9 +37,10 @@
 	"dependencies": {
 		"@react-three/drei": "^7.7.0",
 		"@react-three/fiber": "^7.0.6",
-		"reacat": "^0.4.1",
+		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"sirv-cli": "^1.0.14",
+		"react-helmet": "^6.1.0",
+		"react-router-dom": "^5.3.0",
 		"three": "^0.132.2"
 	}
 }
