--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "concurrently \"rollup -c -w\" \"python3 server/flaskServer.py --dev\"",
-		"build": "rollup -c"
+		"dev": "npx snowpack dev",
+		"build": "npx snowpack build"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^20.0.0",
-		"@rollup/plugin-node-resolve": "^13.0.4",
-		"@rollup/plugin-typescript": "^8.2.5",
+		"@snowpack/plugin-dotenv": "^2.2.0",
+		"@snowpack/plugin-react-refresh": "^2.5.0",
+		"@snowpack/plugin-typescript": "^1.2.1",
 		"@types/react": "^17.0.20",
 		"@types/react-dom": "^17.0.9",
 		"@types/react-helmet": "^6.1.2",
 		"@types/react-router-dom": "^5.1.9",
+		"@types/snowpack-env": "^2.3.4",
 		"@types/three": "^0.131.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
@@ -26,17 +27,13 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"patch-package": "^6.4.7",
 		"prettier": "^2.4.0",
-		"rollup": "^2.56.3",
-		"rollup-plugin-analyzer": "^4.0.0",
-		"rollup-plugin-css-only": "^3.1.0",
-		"rollup-plugin-livereload": "^2.0.5",
-		"rollup-plugin-replace": "^2.2.0",
-		"rollup-plugin-terser": "^7.0.2",
+		"snowpack": "^3.8.8",
 		"typescript": "^4.4.3"
 	},
 	"dependencies": {
 		"@react-three/drei": "^7.7.0",
 		"@react-three/fiber": "^7.0.6",
+		"framer-motion": "^4.1.17",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
