--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "npx snowpack dev",
-		"build": "npx snowpack build"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"serve": "vite preview"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@snowpack/plugin-dotenv": "^2.2.0",
-		"@snowpack/plugin-react-refresh": "^2.5.0",
-		"@snowpack/plugin-typescript": "^1.2.1",
 		"@types/react": "^17.0.20",
 		"@types/react-dom": "^17.0.9",
 		"@types/react-helmet": "^6.1.2",
 		"@types/react-router-dom": "^5.1.9",
-		"@types/snowpack-env": "^2.3.4",
 		"@types/three": "^0.131.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
+		"@vitejs/plugin-react-refresh": "^1.3.6",
+		"autoprefixer": "^10.3.4",
 		"concurrently": "^6.2.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"patch-package": "^6.4.7",
+		"postcss": "^8.3.6",
 		"prettier": "^2.4.0",
-		"snowpack": "^3.8.8",
-		"typescript": "^4.4.3"
+		"tailwindcss": "^2.2.15",
+		"typescript": "^4.4.3",
+		"vite": "^2.5.8"
 	},
 	"dependencies": {
 		"@react-three/drei": "^7.7.0",
